Ansible/roles/postgres-cluster/ui/files/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "postgres-operator-ui"
  namespace: postgres
  labels:
    name: "postgres-operator-ui"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: "postgres-operator-ui"
  template:
    metadata:
      labels:
        name: "postgres-operator-ui"
    spec:
      serviceAccountName: postgres-operator-ui
      containers:
        - name: "service"
          image: ghcr.io/zalando/postgres-operator-ui:v1.13.0
          ports:
            - containerPort: 8081
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
